# file-manager

./: .gitignore  Cargo.toml
approximate-string-matcher/: Cargo.toml
approximate-string-matcher/src/: lib.rs
file-manager/: Cargo.toml
file-manager/src/: arguments.rs  gui.rs  images.rs  main.rs
file-manager/src/gui/: logic.rs  main_view.rs  meta_view.rs  visual.rs
meta/: Cargo.toml
meta/src/: lib.rs  model.rs
src/: gui.rs  images.rs  main.rs
